--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,71607],[],[[4,0,5,[],[1,1126,9051],[]],[6,0,7,[],[1,10178,7175],[]],[8,0,9,[],[1,17355,7135],[]],[10,0,11,[],[1,24492,10239],[]],[12,0,13,[],[1,34735,8886],[]],[14,0,15,[],[1,43622,8183],[]],[16,0,17,[],[1,51807,8168],[]],[18,0,19,[],[1,59976,11628],[]]],[],[8,8,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,28952],[],[[4,0,5,[],[1,734,18683],[]],[6,0,7,[],[1,19420,9530],[]]],[],[2,2,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Api Tests","*C:\\Users\\safac\\OneDrive\\Desktop\\flaskapp\\tests\\api_tests.robot","*tests/api_tests.robot","*Valid Login Test","*<p>Test valid login credentials\x3c/p>","*Invalid Login Test","*<p>Test invalid login credentials\x3c/p>","*Dashboard Access Test","*<p>Test access to dashboard after valid login\x3c/p>","*Logout Test","*<p>Test logout functionality\x3c/p>","*Add Note Test","*<p>Test adding a note\x3c/p>","*Delete Note Test","*<p>Test deleting a note\x3c/p>","*Edit Note Test","*<p>Test editing a note\x3c/p>","*Profile Update Test","*<p>Test updating the user profile\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Api Tests","*C:\\Users\\safac\\OneDrive\\Desktop\\flaskapp\\tests\\api_tests.robot","*tests/api_tests.robot","*Add Employee Test","*<p>Test adding a new employee\x3c/p>","*View Employee List Test","*<p>Test viewing the employee list\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:10","fail":0,"label":"All Tests","pass":8,"skip":0}],[],[{"elapsed":"00:01:12","fail":0,"id":"s1","label":"Api Tests","name":"Api Tests","pass":8,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:28","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:29","fail":0,"id":"s1","label":"Api Tests","name":"Api Tests","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1731087147805;
+window.output["baseMillis"] = 1731088959204;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 71673;
+window.output["generated"] = 29015;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
