the counting employees functions & tests

--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,28952],[],[[4,0,5,[],[1,734,18683],[]],[6,0,7,[],[1,19420,9530],[]]],[],[2,2,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,11442],[],[[4,0,5,[],[1,662,10779],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Api Tests","*C:\\Users\\safac\\OneDrive\\Desktop\\flaskapp\\tests\\api_tests.robot","*tests/api_tests.robot","*Add Employee Test","*<p>Test adding a new employee\x3c/p>","*View Employee List Test","*<p>Test viewing the employee list\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Profile","*C:\\Users\\safac\\OneDrive\\Desktop\\flaskapp\\tests\\profile.robot","*tests/profile.robot","*Profile Update Test","*<p>Test updating the user profile\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:28","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:29","fail":0,"id":"s1","label":"Api Tests","name":"Api Tests","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:11","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:11","fail":0,"id":"s1","label":"Profile","name":"Profile","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1731088959204;
+window.output["baseMillis"] = 1731090400341;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 29015;
+window.output["generated"] = 11459;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
