--- a/log.html
+++ b/log.html
@@ -2071,25 +2071,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,11442],[],[[4,0,5,[],[1,662,10779],[[0,6,7,0,8,9,0,0,[1,665,3954],[[665,2,10]]],[0,11,7,0,12,13,0,0,[1,4620,276],[[4621,2,14]]],[0,11,7,0,12,15,0,0,[1,4896,241],[[4897,2,16]]],[0,17,7,0,18,19,0,0,[1,5138,186],[[5138,2,20]]],[0,21,7,0,22,1,0,0,[1,5324,1550],[[5325,2,23]]],[0,11,7,0,12,24,0,0,[1,6874,197],[[6874,2,25]]],[0,11,7,0,12,26,0,0,[1,7072,169],[[7072,2,27]]],[0,11,7,0,12,28,0,0,[1,7242,199],[[7242,2,29]]],[0,11,7,0,12,30,0,0,[1,7442,262],[[7442,2,31]]],[0,17,7,0,18,32,0,0,[1,7705,250],[[7705,2,33]]],[0,34,7,0,35,36,0,0,[1,7955,35],[[7990,2,37]]],[0,38,7,0,39,0,0,0,[1,7992,3450],[]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,14783],[],[[4,0,5,[],[0,783,13996,6],[[0,7,8,0,9,10,0,0,[1,785,6261],[[785,2,11]]],[0,12,8,0,13,14,0,0,[1,7047,398],[[7049,2,15]]],[0,12,8,0,13,16,0,0,[1,7446,360],[[7447,2,17]]],[0,18,8,0,19,20,0,0,[1,7806,237],[[7807,2,21]]],[0,22,8,0,23,1,0,0,[1,8044,6726],[[8044,2,24]]],[0,12,8,0,13,25,0,0,[0,14771,1],[[14772,5,6]]],[0,12,8,0,13,26,0,0,[3,14772,0],[]],[0,12,8,0,13,27,0,0,[3,14773,0],[]],[0,18,8,0,19,28,0,0,[3,14774,0],[]],[0,29,8,0,30,31,0,0,[3,14776,0],[]],[0,32,8,0,33,0,0,0,[3,14778,0],[]]]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Profile","*C:\\Users\\safac\\OneDrive\\Desktop\\flaskapp\\tests\\profile.robot","*tests/profile.robot","*Profile Update Test","*<p>Test updating the user profile\x3c/p>","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL}    chrome","*Opening browser 'chrome' to base url '<a href=\"http://127.0.0.1:5000/\">http://127.0.0.1:5000/\x3c/a>'.","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*name=username    testuser","*Typing text 'testuser' into text field 'name=username'.","*name=password    password","*Typing text 'password' into text field 'name=password'.","*Click Button","*<p>Clicks the button identified by <code>locator\x3c/code>.\x3c/p>","*xpath=//input[@type='submit']","*Clicking button 'xpath=//input[@type='submit']'.","*Click Link","*<p>Clicks a link identified by <code>locator\x3c/code>.\x3c/p>","*Clicking link 'Profile'.","*name=username    newtestuser","*Typing text 'newtestuser' into text field 'name=username'.","*name=first_name    Jane","*Typing text 'Jane' into text field 'name=first_name'.","*name=last_name    Smith","*Typing text 'Smith' into text field 'name=last_name'.","*name=phone    987-654-3210","*Typing text '987-654-3210' into text field 'name=phone'.","*xpath=//button[contains(text(), 'Update Profile')]","*Clicking button 'xpath=//button[contains(text(), 'Update Profile')]'.","*Page Should Contain","*<p>Verifies that current page contains <code>text\x3c/code>.\x3c/p>","*Username updated successfully!","*Current page contains text 'Username updated successfully!'.","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Profile","*C:\\Users\\safac\\OneDrive\\Desktop\\flaskapp\\tests\\profile.robot","*tests/profile.robot","*Profile Update Incomplete Test","*<p>Test updating the user profile with missing information\x3c/p>","*Keyword 'SeleniumLibrary.Input Text' expected 2 to 3 arguments, got 1.","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL}    chrome","*Opening browser 'chrome' to base url '<a href=\"http://127.0.0.1:5000/\">http://127.0.0.1:5000/\x3c/a>'.","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*name=username    testuser","*Typing text 'testuser' into text field 'name=username'.","*name=password    password","*Typing text 'password' into text field 'name=password'.","*Click Button","*<p>Clicks the button identified by <code>locator\x3c/code>.\x3c/p>","*xpath=//input[@type='submit']","*Clicking button 'xpath=//input[@type='submit']'.","*Click Link","*<p>Clicks a link identified by <code>locator\x3c/code>.\x3c/p>","*Clicking link 'Profile'.","*name=first_name","*name=last_name    Smith","*name=phone    987-654-3210","*xpath=//button[contains(text(), 'Update Profile')]","*Page Should Contain","*<p>Verifies that current page contains <code>text\x3c/code>.\x3c/p>","*Please fill out this field.","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:11","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:11","fail":0,"id":"s1","label":"Profile","name":"Profile","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:14","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:15","fail":1,"id":"s1","label":"Profile","name":"Profile","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1731090400341;
+window.output["baseMillis"] = 1731090954888;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 11459;
+window.output["generated"] = 14849;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
