--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,11442],[],[[4,0,5,[],[1,662,10779],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,14783],[],[[4,0,5,[],[0,783,13996,6],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Profile","*C:\\Users\\safac\\OneDrive\\Desktop\\flaskapp\\tests\\profile.robot","*tests/profile.robot","*Profile Update Test","*<p>Test updating the user profile\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Profile","*C:\\Users\\safac\\OneDrive\\Desktop\\flaskapp\\tests\\profile.robot","*tests/profile.robot","*Profile Update Incomplete Test","*<p>Test updating the user profile with missing information\x3c/p>","*Keyword 'SeleniumLibrary.Input Text' expected 2 to 3 arguments, got 1."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:11","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:11","fail":0,"id":"s1","label":"Profile","name":"Profile","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:14","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:15","fail":1,"id":"s1","label":"Profile","name":"Profile","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1731090400341;
+window.output["baseMillis"] = 1731090954888;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 11459;
+window.output["generated"] = 14849;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
