adding the moneey ya okhty

--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,14783],[],[[4,0,5,[],[0,783,13996,6],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,369],[],[[4,0,5,[],[1,302,23],[]],[6,0,7,[],[1,327,14],[]],[8,0,9,[],[1,343,8],[]],[10,0,11,[],[1,353,4],[]],[12,0,13,[],[1,360,6],[]]],[],[5,5,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Profile","*C:\\Users\\safac\\OneDrive\\Desktop\\flaskapp\\tests\\profile.robot","*tests/profile.robot","*Profile Update Incomplete Test","*<p>Test updating the user profile with missing information\x3c/p>","*Keyword 'SeleniumLibrary.Input Text' expected 2 to 3 arguments, got 1."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Financial test","*C:\\Users\\safac\\OneDrive\\Desktop\\flaskapp\\tests\\Financial_test.robot","*tests/Financial_test.robot","*Test Correct Financial Calculation","*<p>Test the financial calculation function with correct values\x3c/p>","*Test Incorrect Financial Calculation","*<p>Test the financial calculation function with incorrect expected values\x3c/p>","*Test Zero Values","*<p>Test the financial calculation with zero earnings and expenses\x3c/p>","*Test Negative Earnings","*<p>Test the financial calculation with negative earnings\x3c/p>","*Test Large Values","*<p>Test the financial calculation with large earnings and expenses\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:14","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:15","fail":1,"id":"s1","label":"Profile","name":"Profile","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":5,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Financial test","name":"Financial test","pass":5,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1731090954888;
+window.output["baseMillis"] = 1731093130281;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 14849;
+window.output["generated"] = 415;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
