adding the testing for the not crud

--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,369],[],[[4,0,5,[],[1,302,23],[]],[6,0,7,[],[1,327,14],[]],[8,0,9,[],[1,343,8],[]],[10,0,11,[],[1,353,4],[]],[12,0,13,[],[1,360,6],[]]],[],[5,5,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,56405],[],[[4,0,5,[],[1,495,7393],[]],[6,0,7,[],[1,7891,7990],[]],[8,0,9,[],[1,15882,6649],[]],[10,0,11,[],[1,22532,8995],[]],[12,0,13,[],[1,31528,7604],[]],[14,0,15,[],[1,39134,8619],[]],[16,0,17,[],[1,47755,8646],[]]],[],[7,7,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Financial test","*C:\\Users\\safac\\OneDrive\\Desktop\\flaskapp\\tests\\Financial_test.robot","*tests/Financial_test.robot","*Test Correct Financial Calculation","*<p>Test the financial calculation function with correct values\x3c/p>","*Test Incorrect Financial Calculation","*<p>Test the financial calculation function with incorrect expected values\x3c/p>","*Test Zero Values","*<p>Test the financial calculation with zero earnings and expenses\x3c/p>","*Test Negative Earnings","*<p>Test the financial calculation with negative earnings\x3c/p>","*Test Large Values","*<p>Test the financial calculation with large earnings and expenses\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Note Crud","*C:\\Users\\safac\\robotframework-project\\tests\\note_crud.robot","*tests/note_crud.robot","*Access Notes Page Test","*<p>Test accessing the notes page\x3c/p>","*Add New Event Test","*<p>Test adding a new event\x3c/p>","*Add New Event Test without any text","*<p>Test adding a new event without any text\x3c/p>","*Delete Event Test","*<p>Test deleting a note and verifying the length decreases by one\x3c/p>","*Edit Note Page Test","*<p>Test if the edit note page displays correctly\x3c/p>","*Edit Note Page Test with text","*<p>Test if the edit works correctly\x3c/p>","*Edit Note Page Test without text","*<p>Test if the edit without a text works\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":5,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Financial test","name":"Financial test","pass":5,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:56","fail":0,"label":"All Tests","pass":7,"skip":0}],[],[{"elapsed":"00:00:56","fail":0,"id":"s1","label":"Note Crud","name":"Note Crud","pass":7,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1731093130281;
+window.output["baseMillis"] = 1731779784175;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 415;
+window.output["generated"] = 56440;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
